added Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PortfolioV2</title>
-  <base href="/">
+  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://atangeman.github.io/portfolio-v2" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Portfolio" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Portfolio" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="My experience in GIS helps me to design and build reliable enterprise solutions. This portfolio showcases my work in GIS and programming." />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://atangeman.github.io/portfolio-v2/assets/portfoliov2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+</link>
 </head>
 <body>
   <app-root></app-root>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JGWYP346YL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JGWYP346YL');
+  </script>
 </body>
 </html>
