--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,11 @@
   <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
   <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Portfolio" />
   <meta prefix="og: http://ogp.me/ns#" property="og:description" content="My experience in GIS helps me to design and build reliable enterprise solutions. This portfolio showcases my work in GIS and programming." />
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://atangeman.github.io/portfolio-v2/assets/portfoliov2.png" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://atangeman.github.io/portfolio-v2/assets/portfoliov2.png?q=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 </link>
 </head>
 <body>
